--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -10,14 +10,32 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="132dp"
-            android:layout_height="48dp"
-            android:text="@{panel.directions}"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/color_field"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Color:"
+                tools:layout_editor_absoluteX="50dp"
+                tools:layout_editor_absoluteY="170dp" />
+
+            <TextView
+                android:id="@+id/hex_color"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:text='@{String.format("#%02x%02x%02x", panel.r, panel.g, panel.b)}'
+                android:background='@{android.graphics.Color.parseColor(String.format("#%02x%02x%02x", panel.r, panel.g, panel.b))}'
+                app:layout_constraintStart_toEndOf="@+id/textView3"
+                app:layout_constraintTop_toTopOf="@+id/textView3" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
