Refactoring API service class + adding color indicator next to hex code

--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -6,36 +6,36 @@
     <data>
         <variable name="panel" type="com.example.nanoleafdiy.Panel" />
     </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:padding="30dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/color_field"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/color_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Color:"
-                tools:layout_editor_absoluteX="50dp"
-                tools:layout_editor_absoluteY="170dp" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:drawableLeft="@drawable/color_icon"/>
 
             <TextView
-                android:id="@+id/hex_color"
+                android:id="@+id/color_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
-                android:text='@{String.format("#%02x%02x%02x", panel.r, panel.g, panel.b)}'
-                android:background='@{android.graphics.Color.parseColor(String.format("#%02x%02x%02x", panel.r, panel.g, panel.b))}'
-                app:layout_constraintStart_toEndOf="@+id/textView3"
-                app:layout_constraintTop_toTopOf="@+id/textView3" />
+                android:text='@{String.format("#%02x%02x%02x", panel.r, panel.g, panel.b).toUpperCase()}'
+                app:layout_constraintStart_toEndOf="@+id/color_text"
+                app:layout_constraintTop_toTopOf="@+id/color_text" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
