--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <data>
-        <variable name="panel" type="com.example.nanoleafdiy.Panel" />
+        <variable name="panel" type="com.example.nanoleafdiy.utils.Panel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
