Can now switch lighting modes through app, and change settings of solid color mode

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/page_container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="fill_parent"
     tools:context=".activities.MainActivity">
 
     <LinearLayout
@@ -20,10 +20,14 @@
             android:layout_height="match_parent"
             android:layout_weight="1">
 
+            <com.example.nanoleafdiy.views.NetworkDiagramView
+                android:id="@+id/network_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/details_container"
+            android:id="@+id/details_container_outer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1" />
