--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -1,41 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable name="panel" type="com.example.nanoleafdiy.utils.Panel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/details_container_inner"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="30dp">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/color_field"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <TextView
-                android:id="@+id/color_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Color:"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:drawableLeft="@drawable/color_icon"/>
-
-            <TextView
-                android:id="@+id/color_value"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:text='@{String.format("#%02x%02x%02x", panel.r, panel.g, panel.b).toUpperCase()}'
-                app:layout_constraintStart_toEndOf="@+id/color_text"
-                app:layout_constraintTop_toTopOf="@+id/color_text" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="match_parent" />
 </layout>
