--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/page_container"
     android:layout_width="match_parent"
     android:layout_height="fill_parent"
-    tools:context=".activities.MainActivity">
+    tools:context=".activities.main.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
