One 'change mode' button in the parent fragment is way better than an identical button in each child

--- a/app/src/main/res/layout/fragment_details_gradient.xml
+++ b/app/src/main/res/layout/fragment_details_gradient.xml
@@ -4,20 +4,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="30dp">
+    android:layout_height="match_parent">
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedScrollView"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:fillViewport="false"
-        android:paddingTop="50dp"
-        android:paddingBottom="50dp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/gradient_switchmode_button">
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/gradient_step_list"
@@ -52,12 +49,4 @@
             android:text="+ Add new step" />
     </LinearLayout>
 
-    <Button
-        android:id="@+id/gradient_switchmode_button"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Choose Another Mode"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
