--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -1,13 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
+<layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable name="panel" type="com.example.nanoleafdiy.utils.Panel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/details_container_inner"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="30dp">
+
+        <Button
+            android:id="@+id/switchmode_button"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Choose another mode"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/details_container_inner" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/details_container_inner"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/switchmode_button"
+            app:layout_constraintHeight_default="wrap"/>
+    </LinearLayout>
 </layout>
