--- a/app/src/main/res/layout/fragment_details_choosemode.xml
+++ b/app/src/main/res/layout/fragment_details_choosemode.xml
@@ -7,8 +7,7 @@
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="30dp">
+        android:layout_height="match_parent">
 
         <com.example.nanoleafdiy.utils.SquareImageView
             android:id="@+id/modeSelect_solid"
