--- a/app/src/main/res/layout/fragment_details_nosettings.xml
+++ b/app/src/main/res/layout/fragment_details_nosettings.xml
@@ -9,16 +9,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="30dp">
-
-        <Button
-            android:id="@+id/nosettings_switchmode_button"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Choose Another Mode"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/textView2"
