--- a/app/src/main/res/layout/fragment_details_solid.xml
+++ b/app/src/main/res/layout/fragment_details_solid.xml
@@ -5,14 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="30dp">
-
-    <Button
-        android:id="@+id/solid_switchmode_button"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Choose Another Mode" />
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/color_field"
