--- a/app/src/main/res/layout/fragment_details_solid.xml
+++ b/app/src/main/res/layout/fragment_details_solid.xml
@@ -10,23 +10,24 @@
         android:id="@+id/color_field"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_margin="10dp"
         android:gravity="center"
         android:text='Loading'
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/solidpresets_button"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/solidpresets_button" />
 
     <Button
         android:id="@+id/solidpresets_button"
+        style="?android:attr/buttonBarButtonStyle"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:text="Presets >"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
