--- a/app/src/main/res/layout/fragment_details_choosemode.xml
+++ b/app/src/main/res/layout/fragment_details_choosemode.xml
@@ -1,133 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
+<layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable name="panel" type="com.example.nanoleafdiy.utils.Panel" />
     </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/choosemode_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.example.nanoleafdiy.utils.SquareImageView
-            android:id="@+id/modeSelect_solid"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:gravity="center"
-            android:textColor="@android:color/white"
-            android:textSize="25sp"
-            app:layout_constraintHeight_default="percent"
-            app:layout_constraintHeight_percent="0.33"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/choosemode_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:nestedScrollingEnabled="false"
+            android:overScrollMode="never"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintWidth_default="percent"
-            app:layout_constraintWidth_percent="0.5" />
-
-        <com.example.nanoleafdiy.utils.SquareImageView
-            android:id="@+id/modeSelect_rainbow"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:gravity="center"
-            android:textColor="@android:color/white"
-            android:textSize="25sp"
-            app:layout_constraintHeight_default="percent"
-            app:layout_constraintHeight_percent="0.33"
-            app:layout_constraintStart_toStartOf="@+id/modeSelect_solid"
-            app:layout_constraintTop_toBottomOf="@+id/modeSelect_solid"
-            app:layout_constraintWidth_default="percent"
-            app:layout_constraintWidth_percent="0.5" />
-
-        <com.example.nanoleafdiy.utils.SquareImageView
-            android:id="@+id/modeSelect_theaterchase"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:gravity="center"
-            android:textColor="@android:color/white"
-            android:textSize="25sp"
-            app:layout_constraintHeight_default="percent"
-            app:layout_constraintHeight_percent="0.33"
-            app:layout_constraintStart_toEndOf="@+id/modeSelect_rainbow"
-            app:layout_constraintTop_toBottomOf="@+id/modeSelect_gradient"
-            app:layout_constraintWidth_default="percent"
-            app:layout_constraintWidth_percent="0.5" />
-
-        <com.example.nanoleafdiy.utils.SquareImageView
-            android:id="@+id/modeSelect_gradient"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:gravity="center"
-            android:textColor="@android:color/white"
-            android:textSize="25sp"
-            app:layout_constraintHeight_default="percent"
-            app:layout_constraintHeight_percent="0.33"
-            app:layout_constraintLeft_toRightOf="@id/modeSelect_solid"
-            app:layout_constraintTop_toTopOf="@+id/modeSelect_solid"
-            app:layout_constraintWidth_default="percent"
-            app:layout_constraintWidth_percent="0.5" />
-
-        <com.example.nanoleafdiy.utils.SquareImageView
-            android:id="@+id/modeSelect_theaterchaserainbow"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:gravity="center"
-            android:textColor="@android:color/white"
-            android:textSize="25sp"
-            app:layout_constraintHeight_default="percent"
-            app:layout_constraintHeight_percent="0.33"
-            app:layout_constraintStart_toStartOf="@+id/modeSelect_rainbow"
-            app:layout_constraintTop_toBottomOf="@+id/modeSelect_rainbow"
-            app:layout_constraintWidth_default="percent"
-            app:layout_constraintWidth_percent="0.5" />
-
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Solid"
-            app:layout_constraintBottom_toBottomOf="@+id/modeSelect_solid"
-            app:layout_constraintEnd_toEndOf="@+id/modeSelect_solid"
-            app:layout_constraintStart_toStartOf="@+id/modeSelect_solid"
-            app:layout_constraintTop_toTopOf="@+id/modeSelect_solid" />
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Gradient"
-            app:layout_constraintBottom_toTopOf="@+id/modeSelect_theaterchase"
-            app:layout_constraintEnd_toEndOf="@+id/modeSelect_gradient"
-            app:layout_constraintStart_toEndOf="@+id/modeSelect_solid"
-            app:layout_constraintTop_toTopOf="@+id/modeSelect_gradient" />
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Rainbow"
-            app:layout_constraintBottom_toBottomOf="@+id/modeSelect_rainbow"
-            app:layout_constraintEnd_toEndOf="@+id/modeSelect_rainbow"
-            app:layout_constraintStart_toStartOf="@+id/modeSelect_rainbow"
-            app:layout_constraintTop_toBottomOf="@+id/modeSelect_solid" />
-
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Theater Chase"
-            app:layout_constraintBottom_toBottomOf="@+id/modeSelect_theaterchase"
-            app:layout_constraintEnd_toEndOf="@+id/modeSelect_theaterchase"
-            app:layout_constraintStart_toEndOf="@+id/modeSelect_rainbow"
-            app:layout_constraintTop_toTopOf="@+id/modeSelect_theaterchase" />
-
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Theater Chase Rainbow"
-            app:layout_constraintBottom_toBottomOf="@+id/modeSelect_theaterchaserainbow"
-            app:layout_constraintEnd_toEndOf="@+id/modeSelect_theaterchaserainbow"
-            app:layout_constraintStart_toStartOf="@+id/modeSelect_theaterchaserainbow"
-            app:layout_constraintTop_toBottomOf="@+id/modeSelect_rainbow" />
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
