--- a/app/src/main/res/layout/service_listview_item.xml
+++ b/app/src/main/res/layout/service_listview_item.xml
@@ -23,6 +23,7 @@
         android:layout_weight="2.5"
         android:paddingStart="10dp"
         android:text="Loading"
+        android:textSize="30dp"
         android:textAlignment="center" />
 
 </LinearLayout>
